[project]
name = "spheres_environment"
description = "Framework for a virtual environment in which spherical objects interact in a 3D space."
authors = [
  {name='a.whit', email='nml@whit.contact'},
]
readme="README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Intended Audience :: Science/Research",
]
version="0.0.1"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/ricmua/spheres_environment"

[tool.setuptools_scm]
#write_to = "pkg/_version.py"

