[metadata]
name = spheres_environment
#version = attr: spheres_environment.__version__
description = Framework for a virtual environment in which spherical objects interact in a 3D space.
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
keywords = 
license = Mozilla Public License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Intended Audience :: Science/Research
    
[options]
packages = spheres_environment
install_requires =
    requests
#    importlib-metadata; python_version < "3.8"


